rfc: remove package creation form the playground

--- a/src-gen/Weknow.GraphQL.Generation.SrcGen.Playground/Weknow.GraphQL.Generation.SrcGen.Playground.csproj
+++ b/src-gen/Weknow.GraphQL.Generation.SrcGen.Playground/Weknow.GraphQL.Generation.SrcGen.Playground.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <Configurations>Debug;Release;Gen</Configurations>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
