--- a/src-gen/Weknow.GraphQL.Generation.SrcGen.Playground/Weknow.GraphQL.Generation.SrcGen.Playground.csproj
+++ b/src-gen/Weknow.GraphQL.Generation.SrcGen.Playground/Weknow.GraphQL.Generation.SrcGen.Playground.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GraphQL.Client.Abstractions" Version="5.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="icon.png">
       <PackagePath></PackagePath>
       <Pack>True</Pack>
