feat: automatic generation of  container when generating a send query test: against github api

--- a/src-gen/Weknow.GraphQL.Generation.SrcGen.Playground/Weknow.GraphQL.Generation.SrcGen.Playground.csproj
+++ b/src-gen/Weknow.GraphQL.Generation.SrcGen.Playground/Weknow.GraphQL.Generation.SrcGen.Playground.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GraphQL.Client" Version="5.1.0" />
     <PackageReference Include="GraphQL.Client.Abstractions" Version="5.1.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+    <PackageReference Include="GraphQL.Client.Serializer.SystemTextJson" Version="5.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
